--- a/projects/task/src/lib/adapters/primary/ui/task-list.component.html
+++ b/projects/task/src/lib/adapters/primary/ui/task-list.component.html
@@ -1,1 +1,5 @@
-<li *ngFor="let zadanie of task$ | async">{{ zadanie | json }}</li>
+XDD
+
+<div class="row" style="width: 30rem" *ngFor="let task of task$ | async">
+  <img [src]="" class="card-img-top" [alt]="task.id" />
+</div>
