--- a/src/app/pages/home.page.html
+++ b/src/app/pages/home.page.html
@@ -1,1 +1,6 @@
-<h1>HomePage</h1>
+<h1>Get a clear view of the day ahead</h1>
+<p>All your tasks that are due today will show up here.</p>
+
+<button routerLink="/addtask" type="button" class="btn btn-light">
+  Add task
+</button>
