--- a/projects/task/src/lib/adapters/primary/ui/task-list.component.html
+++ b/projects/task/src/lib/adapters/primary/ui/task-list.component.html
@@ -1,3 +1,6 @@
 <ul>
   <li *ngFor="let task of task$ | async">{{ task | json }}</li>
 </ul>
+<li *ngFor="let task of task$ | async">
+  {{ task.zadanie }}
+</li>
