--- a/projects/navbar/src/lib/adapters/primary/ui/navbar.component.html
+++ b/projects/navbar/src/lib/adapters/primary/ui/navbar.component.html
@@ -9,7 +9,8 @@
 <nav class="navbar navbar-light" style="background-color: #ffffff">
   <div class="container-fluid">
     <a class="navbar-brand" style="color: #000000">
-      <p class="fs-4">Today {{ todayDate | date }}</p>
+      <p class="fw-bold fs-1">TODAY</p>
+      <p>{{ todayDate | date }}</p>
     </a>
   </div>
 </nav>
