--- a/src/app/pages/home.page.html
+++ b/src/app/pages/home.page.html
@@ -1,6 +1,37 @@
-<h1>Get a clear view of the day ahead</h1>
-<p>All your tasks that are due today will show up here.</p>
+<div class="d-flex justify-content-center pt-5">
+  <h1>Get a clear view of the day ahead</h1>
+</div>
+<div class="d-flex justify-content-center">
+  All your tasks that are due today will show up there.
+</div>
+<div class="d-flex justify-content-center py-5">
+  <button routerLink="/addtask" type="button" style="background-color: #7749f8">
+    <p class="text-light">Add Tasks</p>
+  </button>
+</div>
 
-<button routerLink="/addtask" type="button" class="btn btn-light">
-  Add task
-</button>
+<div class="container">
+  <div class="col">
+    <img
+      src="https://media.istockphoto.com/photos/project-management-concept-with-gantt-chart-picture-id1279502184?k=20&m=1279502184&s=612x612&w=0&h=oRF9Q_FJr1-unVh2-RPs-xHsN3AJsBObqcDSkR8ICtk="
+      class="img-fluid"
+      alt="..."
+      width="349"
+      height="180"
+    />
+    <img
+      src="https://media.istockphoto.com/photos/cropped-image-of-creative-female-secretary-creating-planning-for-picture-id905497700?k=20&m=905497700&s=612x612&w=0&h=_qwvWiTrAqhDAZpVwj-zCcsZtc4i4JvPQXV1_oVo5UI="
+      class="img-fluid"
+      alt="..."
+      width="349"
+      height="180"
+    />
+    <img
+      src="https://media.istockphoto.com/photos/check-off-completed-tasks-on-a-todo-list-picture-id1011182136?k=20&m=1011182136&s=612x612&w=0&h=XQamCwumBqah0r5gJEAtwVn9y7Ab0j-oo3YNjs2Jwgc="
+      class="img-fluid"
+      alt="..."
+      width="349"
+      height="180"
+    />
+  </div>
+</div>
