--- a/projects/task/src/lib/adapters/primary/ui/task-list.component.html
+++ b/projects/task/src/lib/adapters/primary/ui/task-list.component.html
@@ -1,5 +1,25 @@
-<ul>
-  <li *ngFor="let task of task$ | async">
-    {{ task.zadanie }}
-  </li>
+<ul *ngFor="let task of task$ | async">
+  <input
+    class="form-check-input rounded-circle"
+    type="checkbox"
+    id="checkboxNoLabel"
+    value=""
+    aria-label="..."
+    background="#990000"
+  />
+  {{
+    task.zadanie
+  }}
+  <svg
+    xmlns="http://www.w3.org/2000/svg"
+    width="16"
+    height="16"
+    fill="currentColor"
+    class="bi bi-three-dots"
+    viewBox="0 0 16 16"
+  >
+    <path
+      d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
+    />
+  </svg>
 </ul>
