--- a/projects/task/src/lib/adapters/primary/ui/task-list.component.html
+++ b/projects/task/src/lib/adapters/primary/ui/task-list.component.html
@@ -22,4 +22,8 @@
       d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
     />
   </svg>
+  <select>
+    <option value="delete">delete</option>
+    <option value="edit">edit</option>
+  </select>
 </ul>
