--- a/src/app/pages/home.page.html
+++ b/src/app/pages/home.page.html
@@ -35,3 +35,10 @@
     />
   </div>
 </div>
+
+<select>
+  <option value="grapefruit">Grapefruit</option>
+  <option value="lime">Lime</option>
+  <option selected value="coconut">Coconut</option>
+  <option value="mango">Mango</option>
+</select>
